# paperclip-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/paperclip_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_activity.py  test_agent_extended.py  test_agent_lifecycle.py  test_approvals_extended.py  test_companies.py  test_costs_extended.py  test_goals_extended.py  test_issue_attachments.py  test_issue_comments.py  test_issue_documents.py  test_issue_interactions.py  test_issues_extended.py  test_projects.py  test_routines_crud.py  test_routines_runs.py  test_routines_triggers.py  test_secret_providers.py  test_secrets.py
