[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperclip-mcp"
version = "0.1.0"
description = "MCP server for the Paperclip AI agent orchestration platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "paperclip", "ai-agents", "llm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage   = "https://github.com/wizarck/paperclip-mcp"
Repository = "https://github.com/wizarck/paperclip-mcp"
Issues     = "https://github.com/wizarck/paperclip-mcp/issues"

[project.scripts]
paperclip-mcp = "paperclip_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paperclip_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
